--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,7 +12,7 @@
     tools:context="nathanheller.leafit.MainActivity">
 
     <ImageView
-        android:layout_width="250dp"
+        android:layout_width="match_parent"
         android:layout_height="350dp"
         app:srcCompat="@color/colorPrimary"
         android:layout_alignParentTop="true"
@@ -58,6 +58,16 @@
         android:id="@+id/textView"
         android:layout_below="@id/imageView"
         android:layout_centerHorizontal="true"
+        android:visibility="gone" />
+
+    <Button
+        android:text="Back"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_centerHorizontal="true"
+        android:layout_below="@id/textView"
+        android:onClick="backButton"
+        android:id="@+id/backButton"
         android:visibility="gone" />
 
 </RelativeLayout>
